syntax = "proto3";

package j5.config.v1;

option go_package = "github.com/pentops/j5/gen/j5/config/v1/config_j5pb";

message Input {
  oneof type {
    string local = 1; // name of a local bundle
    Repo repo = 2;
    Registry registry = 3;
    BufRegistry buf_registry = 4;
  }

  message Repo {
    string root = 1; // file:// or git://
    string dir = 2;
    string bundle = 3;
  }

  message Registry {
    string owner = 1;
    string name = 2;
    optional string version = 3;
    optional string reference = 4;
  }

  message BufRegistry {
    string owner = 1;
    string name = 2;
    optional string version = 3;
    optional string reference = 4;
  }
}
